Solved collapse accordion js for home

--- a/sass/_5_pages/_home.scss
+++ b/sass/_5_pages/_home.scss
@@ -102,7 +102,8 @@ img {max-width: 100%;}
     background-color: #444;
     overflow: hidden;
     max-height: 755px;
-    transition: max-height 1.5s linear;
+    transition: max-height .5s linear;
+    .inner { border-top: none;}
     &.closed {
       max-height: 0;
     }
